<resources>
    <string name="app_name">Country App</string>
    <string name="please_wait">Please wait</string>
    <string name="country_app" translatable="false">CountryApp</string>
    <string name="loading">Loading...</string>
    <string name="no_internet">No Internet...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="items">Items</string>
    <string name="about">About</string>
    <string name="made_in_croatia" translatable="false">Made in Croatia</string>
    <string name="exit">Exit</string>
    <string name="exit_application">Exit application?</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="fundation">Fundation</string>
    <string name="fall">Fall</string>
    <string name="capital">Capital</string>
    <string name="language">Language</string>
    <string name="countries">Countries</string>
    <string name="rulers">Rulers</string>
    <string name="monuments">Monuments</string>
    <string name="reign">Reign</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="country">Country</string>
    <string name="religion">Religion</string>
    <string name="add">Add</string>
    <string name="ruler">Ruler</string>
    <string name="monument">Monument</string>
    <string name="AddCountry">Add Country</string>
    <string name="add_ruler">Add Ruler</string>
    <string name="add_monument">Add Monument</string>
    <string name="add_country">Add_Country</string>
    <string name="add_ruler2">Add_Ruler</string>
    <string name="add_monuments">Add_Monuments</string>
    <string name="edit_country">Edit Country</string>
    <string name="save">Save</string>
</resources>