<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_20dp"
    android:background="@color/sand"
    tools:context=".fragment.UpdateCountryFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100dp"
            android:textSize="@dimen/text_size"
            android:gravity="center"
            android:text="@string/edit_country"/>

        <ImageView
            android:id="@+id/ivPicture"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_80dp"
            android:src="@drawable/africa"/>

        <TextView
            android:text="@string/name"
            android:textSize="@dimen/_24sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etName"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="@dimen/_24sp"
            android:paddingBottom="@dimen/_10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/fundation"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:textSize="@dimen/_24sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/fall"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:textSize="@dimen/_24sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etFundation"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:textSize="@dimen/_20dp"
                android:paddingBottom="@dimen/_10dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etFall"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:textSize="@dimen/_20dp"
                android:paddingBottom="@dimen/_10dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:text="@string/capital"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:textSize="@dimen/_24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etCapital"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="@dimen/_20dp"
            android:paddingBottom="@dimen/_10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/language"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:textSize="@dimen/_24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etLanguage"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="@dimen/_20dp"
            android:paddingBottom="@dimen/_10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/religion"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:textSize="@dimen/_24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etReligion"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="@dimen/_20dp"
            android:paddingBottom="@dimen/_10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_gravity="end"
            android:id="@+id/btnUpdateCountry"
            android:textColor="@color/white"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</ScrollView>