<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_20dp"
    tools:context=".fragment.AddRulerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100dp"
            android:textSize="@dimen/text_size"
            android:gravity="center"
            android:text="@string/add_ruler"/>

        <ImageView
            android:id="@+id/ivPicture"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_80dp"
            android:src="@drawable/ruler"/>

        <TextView
            android:text="@string/name"
            android:textSize="@dimen/_24sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etName"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="@dimen/_24sp"
            android:paddingBottom="@dimen/_10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:text="@string/reign"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:textSize="@dimen/_24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etReign"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="@dimen/_20dp"
            android:paddingBottom="@dimen/_10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/country"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:textSize="@dimen/_24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/spinnerCountries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_10dp"
            android:textSize="@dimen/_20dp"
            android:textStyle="bold"
            android:textColor="@color/red" />

        <Button
            android:id="@+id/btnAddRuler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="end"
            android:text="@string/add"
            />

    </LinearLayout>

</ScrollView>