<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="@dimen/_10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivMonument"
            android:src="@drawable/monument"
            android:layout_marginBottom="@dimen/_80dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100dp"/>

        <TextView
            android:text="@string/name"
            android:textSize="@dimen/_24sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvName"
            android:text="@tools:sample/lorem"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="@dimen/_24sp"
            android:paddingBottom="@dimen/_10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/location"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:textSize="@dimen/_24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvLocation"
            android:text="@tools:sample/lorem"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="@dimen/_20dp"
            android:paddingBottom="@dimen/_10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/description"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:textSize="@dimen/_24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvDescription"
            android:text="@tools:sample/lorem"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="@dimen/_20dp"
            android:paddingBottom="@dimen/_10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/country"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:textSize="@dimen/_24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvCountry"
            android:text="@tools:sample/lorem"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="@dimen/_20dp"
            android:paddingBottom="@dimen/_10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</ScrollView>