<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="@dimen/_10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivItem"
            android:src="@drawable/world"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/name"
                android:textSize="@dimen/_24sp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/ivRead"
                android:src="@drawable/red_flag"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvName"
            android:text="@tools:sample/lorem"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="@dimen/_24sp"
            android:paddingBottom="@dimen/_10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/fundation"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:textSize="@dimen/_24sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/fall"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:textSize="@dimen/_24sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvFundation"
                android:text="@tools:sample/lorem"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:textSize="@dimen/_20dp"
                android:paddingBottom="@dimen/_10dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvFall"
                android:text="@tools:sample/lorem"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:textSize="@dimen/_20dp"
                android:paddingBottom="@dimen/_10dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:text="@string/capital"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:textSize="@dimen/_24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvCapital"
            android:text="@tools:sample/lorem"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="@dimen/_20dp"
            android:paddingBottom="@dimen/_10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/language"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:textSize="@dimen/_24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvLanguage"
            android:text="@tools:sample/lorem"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="@dimen/_20dp"
            android:paddingBottom="@dimen/_10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/religion"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:textSize="@dimen/_24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvReligion"
            android:text="@tools:sample/lorem"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="@dimen/_20dp"
            android:paddingBottom="@dimen/_10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>